# songbook-rs

./: .gitignore  Cargo.toml  GL015.txt  LICENSE  Opw789.txt  README.md  conf.yaml  conf.yml  test.txt
src/: app.rs  conf.rs  lib.rs  main.rs  parser.rs  song.rs  ui.rs
src/util/: event.rs  mod.rs
